--- a/src/components/Pheader.astro
+++ b/src/components/Pheader.astro
@@ -1,8 +1,7 @@
 ---
-import json from '../data/global.json';
+import json from '../content/global.json';
 const zh_tw = json["zh_tw"];
 ---
-<a href="about">關於</a>
-<a href="portfolios_show">作品</a>
-<a href="contact">聯絡</a>
+
+
 
