--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@
 
 <html lang="en">
 	<head>
-		<title>PepperSauce | About</title>
+		<title>PepperSauce | 關於</title>
 	</head>
 	<body>
 		<h1>About</h1>
