--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@
 
 <html lang="en">
 	<head>
-		<title>PepperSauce | Contact</title>
+		<title>PepperSauce | 聯絡</title>
 	</head>
 	<body>
 		<h1>Contact</h1>
