--- a/src/pages/portfolios_show.astro
+++ b/src/pages/portfolios_show.astro
@@ -3,9 +3,10 @@
 
 <html lang="en">
 	<head>
-		<title>PepperSauce | Portfolios</title>
+		<title>PepperSauce | 作品集</title>
 	</head>
 	<body>
 		<h1>Portfolios</h1>
+		<a href="portfolios/test">Test</a>
 	</body>
 </html>
