--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,23 +1,32 @@
 ---
-import json from '../content/global.json';
-
-
-const zh_tw = json["zh_tw"];
-const { social } = Astro.props;
-let icon;
+const { social, cls } = Astro.props;
+let icon, link;
 
 if (social === "ig"){
-    icon = "fi fi-brands-instagram";
+    icon = "fi fi-brands-instagram inline-block " + cls;
+    link = "https://www.instagram.com/po_shan.0611/";
 }
 if (social === "dc"){
-    icon = "fi fi-brands-discord";
+    icon = "fi fi-brands-discord inline-block " + cls;
+    link = "https://discord.gg/SHydprvSDJ";
 }
 if (social === "github"){
-    icon = "fi fi-brands-github";
+    icon = "fi fi-brands-github inline-block " + cls;
+    link = "https://github.com/PepperSauce0712";
 }
 ---
 <div>
-    <button>
-        <i style="color:#60656C;" class={icon}></i>
+    <button class="social">
+        <i style="color:#4b4c4e;" class={icon}></i>
     </button>
 </div>
+
+<script define:vars={{link}}>
+    const buttons = document.querySelectorAll("button.social");
+    
+    buttons.forEach((button) => {
+      button.addEventListener("click", () => {
+        window.location.href = link;
+      });
+    });
+</script>
