--- a/src/components/Pheader.astro
+++ b/src/components/Pheader.astro
@@ -1,8 +1,6 @@
 ---
-import Navbar from "./Navbar.astro";
 ---
-
-<header class="bg-black text-white h-11 flex items-center justify-center">
+<header class="bg-black h-11 flex items-center justify-center sticky top-0 opacity-95">
     <text class="text-white text-xs mr-48">PepperSauce</text>
     <a href="about" style="color:#8f9297;" class="text-xs ml-32 mr-4">關於</a>
     <a href="contact" style="color:#8f9297;" class="text-xs mr-4">聯絡</a>
