--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -1,4 +1,5 @@
 ---
+import Pfooter from "../components/Pfooter.astro"
 import Pheader from "../components/Pheader.astro"
 ---
 
@@ -7,7 +8,11 @@ import Pheader from "../components/Pheader.astro"
 		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
 	</head>
 	<body>
+	<div class="flex flex-col min-h-screen">
 		<Pheader/>
+		<Pfooter/>
+	</div>
+
 	</body>
 	<style>
 		body {
