--- a/src/components/Pfooter.astro
+++ b/src/components/Pfooter.astro
@@ -1,8 +1,7 @@
 ---
 import Navbar from "./Navbar.astro";
 ---
-<div class="mb-auto"></div> <!--讓footer置底的東西別動-->
-<footer style="border-top-width: 0.5px; border-color: #323335;" class="h-20 border-solid opacity-65 flex justify-evenly items-center">
+<footer style="border-top-width: 0.5px; border-color: #323335;" class="h-20 border-solid opacity-65 flex justify-evenly items-center mb-auto">
     <div class="flex flex-row">
         <Navbar social="ig" cls="mr-3"/>
         <Navbar social="dc" cls="mr-3"/>
