--- a/src/pages/portfolios_show.astro
+++ b/src/pages/portfolios_show.astro
@@ -1,12 +1,17 @@
 ---
+import Pfooter from "../components/Pfooter.astro";
+import Pheader from "../components/Pheader.astro";
+import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 ---
-
-<html lang="en">
+<html lang="zh_tw">
+	<DefaultWebsite/>
 	<head>
 		<title>PepperSauce | 作品集</title>
 	</head>
 	<body>
-		<h1>Portfolios</h1>
-		<a href="portfolios/test">Test</a>
+		<Pheader/>
+		<div class="flex flex-col items-center flex-grow">
+		</div>
+		<Pfooter/>
 	</body>
 </html>
