--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,15 +3,15 @@ const { social, cls } = Astro.props;
 let icon, link;
 
 if (social === "ig"){
-    icon = "fi fi-brands-instagram inline-block " + cls;
+    icon = "fi fi-brands-instagram " + cls;
     link = "https://www.instagram.com/po_shan.0611/";
 }
 if (social === "dc"){
-    icon = "fi fi-brands-discord inline-block " + cls;
+    icon = "fi fi-brands-discord " + cls;
     link = "https://discord.gg/SHydprvSDJ";
 }
 if (social === "github"){
-    icon = "fi fi-brands-github inline-block " + cls;
+    icon = "fi fi-brands-github " + cls;
     link = "https://github.com/PepperSauce0712";
 }
 ---
