--- a/src/components/Pfooter.astro
+++ b/src/components/Pfooter.astro
@@ -1,12 +1,12 @@
 ---
 import Navbar from "./Navbar.astro";
 ---
-<footer style="border-top-width: 0.5px; border-color: #323335;" class="h-20 border-solid opacity-65 flex justify-evenly items-center mb-auto">
+<footer style="border-top-width: 0.5px; border-color: #323335;" class="h-20 border-solid opacity-65 flex justify-evenly items-center">
     <div class="flex flex-row">
-        <Navbar social="ig" cls="mr-3"/>
-        <Navbar social="dc" cls="mr-3"/>
-        <Navbar social="github" cls=""/>
+        <Navbar social="ig" cls="mr-5 text-xl"/>
+        <Navbar social="dc" cls="mr-5 text-xl"/>
+        <Navbar social="github" cls="text-xl"/>
     </div>
     <text></text>
-    <text style="font-size: 11px;" class="text-zinc-500 opacity-100">Copyright © 2025 PepperSauce. All rights reserved.</text>
+    <text class="text-xs text-zinc-500 opacity-100">Copyright © 2025 PepperSauce. All rights reserved.</text>
 </footer>
