--- a/src/components/Pheader.astro
+++ b/src/components/Pheader.astro
@@ -1,8 +1,8 @@
 ---
 ---
-<header class="bg-black h-11 flex items-center justify-center sticky top-0">
-    <a href="/" class="text-white text-xs mr-48">PepperSauce</a>
-    <a href="about" style="color:#8f9297;" class="text-xs ml-32 mr-4">關於</a>
-    <a href="contact" style="color:#8f9297;" class="text-xs mr-4">聯絡</a>
-    <a href="portfolios_show" style="color:#8f9297;" class="text-xs">作品集</a>
+<header class="bg-black h-16 flex items-center justify-center sticky top-0">
+    <a href="/" class="text-white text-base mr-48">PepperSauce</a>
+    <a href="about" style="color:#8f9297;" class="text-base ml-32 mr-4">關於</a>
+    <a href="contact" style="color:#8f9297;" class="text-base mr-4">聯絡</a>
+    <a href="portfolios_show" style="color:#8f9297;" class="text-base">作品集</a>
 </header>
