--- a/src/components/Pfooter.astro
+++ b/src/components/Pfooter.astro
@@ -1,12 +1,12 @@
 ---
 import Navbar from "./Navbar.astro";
 ---
-<footer style="border-top-width: 0.5px; border-color: #323335;" class="h-20 border-solid opacity-65 flex justify-evenly items-center">
-    <div class="flex flex-row">
-        <Navbar social="ig" cls="mr-5 text-xl"/>
-        <Navbar social="dc" cls="mr-5 text-xl"/>
-        <Navbar social="github" cls="text-xl"/>
+<footer style="border-top-width: 0.5px; border-color: #323335;" class="h-20 opacity-65 flex justify-evenly items-center">
+    <div class="flex flex-row gap-6">
+        <Navbar social="ig" cls="text-2xl"/>
+        <Navbar social="dc" cls="text-2xl"/>
+        <Navbar social="github" cls="text-2xl"/>
     </div>
     <text></text>
-    <text class="text-xs text-zinc-500 opacity-100">Copyright © 2025 PepperSauce. All rights reserved.</text>
+    <text class="text-sm text-zinc-500 opacity-100">Copyright © 2025 PepperSauce. All rights reserved.</text>
 </footer>
