--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -1,11 +1,16 @@
 ---
+import Pfooter from "../components/Pfooter.astro";
+import Pheader from "../components/Pheader.astro";
+
 ---
-<html lang="zh_tw">
+<html lang="en">
 	<head>
 		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
 	</head>
 	<body class="flex flex-col min-h-screen">
-		<slot/>
+		<Pheader/>
+		<slot></slot>
+		<Pfooter/>
 	</body>
 	<style>
 		body {
