--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,7 +8,7 @@ if (social === "dc") icon = "fi fi-brands-discord " + cls;
 if (social === "github") icon = "fi fi-brands-github " + cls;
 ---
 <button class={social}>
-    <i style="color:#4b4c4e;" class={icon}></i>
+    <i style="color:#717171;" class={icon}></i>
 </button>
 
 <script define:vars={{social, link}}>
