--- a/src/components/Pheader.astro
+++ b/src/components/Pheader.astro
@@ -1,10 +1,10 @@
 ---
 ---
 <header class="bg-black h-16 flex items-center justify-evenly sticky top-0">
-    <a href="/" class="text-white text-base">PepperSauce</a>
+    <a href="/PepperWebsite" class="text-white text-base">PepperSauce</a>
     <div class="flex items-center justify-evenly gap-5">
-        <a href="about" style="color:#8f9297;" class="text-lg">關於</a>
-        <a href="contact" style="color:#8f9297;" class="text-lg">聯絡</a>
-        <a href="portfolios_show" style="color:#8f9297;" class="text-lg">作品集</a>
+        <a href="/PepperWebsite/about" style="color:#8f9297;" class="text-lg">關於</a>
+        <a href="/PepperWebsite/contact" style="color:#8f9297;" class="text-lg">聯絡</a>
+        <a href="/PepperWebsite/portfolios_show" style="color:#8f9297;" class="text-lg">作品集</a>
     </div>
 </header>
