--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { Image } from 'astro:assets';
 		<div class="h-36"></div>
 		<div class="flex flex-col items-center min-h-screen">
 			<Image
-			src="/images/PepperSauce_icon.jpg"
+			src="/public/images/PepperSauce_icon.jpg"
 			alt="PepperSauce的頭貼"
 			width="150"
 			height="150"
@@ -32,7 +32,7 @@ import { Image } from 'astro:assets';
 				<Navbar social="github" cls="text-2xl"/>
 			</div>
 			<button class="bg-white rounded-full w-36 h-10 my-3 flex flex-row justify-center gap-2"
-					onclick="window.location.href='/about'">
+					onclick="window.location.href='/PepperWebsite/about'">
 				<i class="fi fi-rr-diploma text-xl my-2.5"></i>
 				<text class="font-bold my-2">查看履歷</text>
 				<i class="fi fi-rr-arrow-right my-2.5"></i>
