--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,53 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
         <title>PepperSauce | 關於</title>
     </head>
     <DefaultWebsite>
-        <div class="flex flex-col items-center min-h-screen">
+        <div class="h-32"></div>
+        <h1 class="text-3xl text-white font-bold">關於我</h1>
+        <text class="text-lg text-neutral-500 my-2">一位興趣多樣卻樣樣不精的學生</text>
+        <div class="h-20"></div>
+
+        <!-- 技能簡介 -->
+        <div class="grid grid-cols-2 gap-5">
+            <div class="bg-neutral-900 w-96 h-64 rounded-2xl grid grid-cols-4 grid-rows-3 p-6 gap-3">
+                <div class="bg-neutral-800 w-14 h-14 rounded-2xl flex justify-center items-center">
+                    <img src="/public/ui_icons/unreal-engine-svgrepo-com.svg" height="40" width="40">
+                </div>
+                <text class="text-white font-bold text-xl my-3 grid col-span-3">虛幻引擎特效</text>
+                <text class="text-neutral-300 text-base col-span-4">
+                    使用 Unreal Engine 中的 Niagara 系統製作特效。
+                </text>
+            </div>
+            <div class="bg-neutral-900 w-96 h-64 rounded-2xl grid grid-cols-4 grid-rows-3 p-6 gap-3">
+                <div class="bg-neutral-800 w-14 h-14 rounded-2xl flex justify-center items-center">
+                    <img src="/public/ui_icons/unreal-engine-svgrepo-com.svg" height="40" width="40">
+                </div>
+                <text class="text-white font-bold text-xl my-3 grid col-span-3">虛幻引擎特效</text>
+                <text class="text-neutral-300 text-base col-span-4">
+                    使用 Unreal Engine 中的 Niagara 系統製作特效。
+                </text>
+            </div>
+            <div class="bg-neutral-900 w-96 h-64 rounded-2xl grid grid-cols-4 grid-rows-3 p-6 gap-3">
+                <div class="bg-neutral-800 w-14 h-14 rounded-2xl flex justify-center items-center">
+                    <img src="/public/ui_icons/unreal-engine-svgrepo-com.svg" height="40" width="40">
+                </div>
+                <text class="text-white font-bold text-xl my-3 grid col-span-3">虛幻引擎特效</text>
+                <text class="text-neutral-300 text-base col-span-4">
+                    使用 Unreal Engine 中的 Niagara 系統製作特效。
+                </text>
+            </div>
+            <div class="bg-neutral-900 w-96 h-64 rounded-2xl grid grid-cols-4 grid-rows-3 p-6 gap-3">
+                <div class="bg-neutral-800 w-14 h-14 rounded-2xl flex justify-center items-center">
+                    <img src="/public/ui_icons/unreal-engine-svgrepo-com.svg" height="40" width="40">
+                </div>
+                <text class="text-white font-bold text-xl my-3 grid col-span-3">虛幻引擎特效</text>
+                <text class="text-neutral-300 text-base col-span-4">
+                    使用 Unreal Engine 中的 Niagara 系統製作特效。
+                </text>
+            </div>
         </div>
+
+        <!-- 技能栈 -->
+
+        <!-- 個人履歷 -->
     </DefaultWebsite>
 </html>
