--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,7 +121,7 @@ import { Image } from 'astro:assets';
             <text class="text-white text-3xl font-bold">Unreal Engine 特效〈次元斬〉展示</text>
             <text class="text-neutral-300 text-lg my-3">使用 Unreal Engine 中的 Niagara 系統製作特效。</text>
             <div class="h-4"></div>
-            <iframe src="https://youtu.be/HpsbraZdZIU?si=roYSYXdgb-l8xXHV" width="100%" height="100%" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QV9iDHDFJJw" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
         <div class="h-20"></div>
@@ -129,7 +129,7 @@ import { Image } from 'astro:assets';
             <text class="text-white text-3xl font-bold">Unreal Engine 特效〈次元斬〉展示</text>
             <text class="text-neutral-300 text-lg my-3">使用 Unreal Engine 中的 Niagara 系統製作特效。</text>
             <div class="h-4"></div>
-            <iframe src="https://youtu.be/HpsbraZdZIU?si=roYSYXdgb-l8xXHV" width="100%" height="100%" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QV9iDHDFJJw" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
         <div class="h-20"></div>
@@ -137,7 +137,7 @@ import { Image } from 'astro:assets';
             <text class="text-white text-3xl font-bold">Unreal Engine 特效〈次元斬〉展示</text>
             <text class="text-neutral-300 text-lg my-3">使用 Unreal Engine 中的 Niagara 系統製作特效。</text>
             <div class="h-4"></div>
-            <iframe src="https://youtu.be/HpsbraZdZIU?si=roYSYXdgb-l8xXHV" width="100%" height="100%" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QV9iDHDFJJw" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
 		<!-- 聯絡我 -->
