--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -10,7 +10,7 @@ const { pageTitle } = Astro.props;
 		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
 		<link rel="icon" href="/PepperWebsite/images/favicon.ico">
 	</head>
-	<body class="flex flex-col min-h-screen">
+	<body class="flex flex-col">
 		<Pheader/>
 		<div class="flex flex-col items-center min-h-screen">
 			<slot></slot>
