--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,29 +115,30 @@ import { Image } from 'astro:assets';
 		<!-- 作品集 -->
         <div class="h-40" id="portfolios_show"></div>
         <div class="text-3xl text-white font-bold">作品集</div>
-
         <div class="h-32"></div>
-        <div class="bg-neutral-900 w-[55rem] h-[40rem] flex flex-col justify-center rounded-xl p-6">
-            <text class="text-white text-3xl font-bold">Unreal Engine 特效〈次元斬〉展示</text>
-            <text class="text-neutral-300 text-lg my-3">使用 Unreal Engine 中的 Niagara 系統製作特效。</text>
-            <div class="h-4"></div>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QV9iDHDFJJw" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-
-        <div class="h-32"></div>
-        <div class="bg-neutral-900 w-[55rem] h-[40rem] flex flex-col justify-center rounded-xl p-6">
-            <text class="text-white text-3xl font-bold">Unreal Engine 特效〈次元斬〉展示</text>
-            <text class="text-neutral-300 text-lg my-3">使用 Unreal Engine 中的 Niagara 系統製作特效。</text>
-            <div class="h-4"></div>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QV9iDHDFJJw" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-
-        <div class="h-32"></div>
-        <div class="bg-neutral-900 w-[55rem] h-[40rem] flex flex-col justify-center rounded-xl p-6">
-            <text class="text-white text-3xl font-bold">Unreal Engine 特效〈次元斬〉展示</text>
-            <text class="text-neutral-300 text-lg my-3">使用 Unreal Engine 中的 Niagara 系統製作特效。</text>
-            <div class="h-4"></div>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QV9iDHDFJJw" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        
+        <div class= "grid grid-cols-2 grid-rows-auto gap-12">
+            <div class="bg-neutral-900 w-[33rem] h-[30rem] flex flex-col rounded-xl p-4 border border-neutral-700">
+                <iframe width="100%" height="290rem" src="https://www.youtube.com/embed/Dnz-BTz9eDU" allow="autoplay; encrypted-media" allowfullscreen
+                class="rounded-xl"></iframe>
+                <div class="h-2"></div>
+                <text class="text-2xl text-white h-9">次元斬</text>
+                <text class="text-base text-neutral-400 w-30 h-24">
+                    簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介
+                    簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介
+                    簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介
+                </text>
+                <div class="flex flex-row justify-between">
+                    <div class="flex flex-row gap-2">
+                        <div class="bg-neutral-800 rounded-full p-1.5 text-white text-sm border border-teal-400">Unreal Engine</div>
+                        <div class="bg-neutral-800 rounded-full p-1.5 text-white text-sm border border-blue-400">VFX</div>
+                        <div class="bg-neutral-800 rounded-full p-1.5 text-white text-sm border border-green-400">Imitation</div>
+                    </div>
+                    <button onclick="window.location.href='/PepperWebsite/'">
+                        <img src="/PepperWebsite/ui_icons/exit.svg" height="28" width="28">
+			        </button>   
+                </div>
+            </div>
         </div>
 
         <div class="h-40"></div>
